--- a/Pipfile
+++ b/Pipfile
@@ -5,9 +5,11 @@ name = "pypi"
 
 [packages]
 "discord.py" = "==1.7.1"
+requests = "*"
 
 [dev-packages]
 yapf = "*"
+pylint = "*"
 
 [requires]
 python_version = "3.8"
